@@ -38,7 +38,7 @@ Display in long format, one file to a line
 List folders recursively
 .LP
 .TP
-.BI -w,\-\-width
+.BI -w,\-\-width=N
 set the number of screen columns, for formatting purposes.
 .LP
 
