@@ -66,7 +66,7 @@ authentication token. The token is stored in
 \fI$HOME/.dbcmdr_token\rR.
 .LP
 .TP
-.BI \-\-loglevel
+.BI \-\-loglevel=N
 Set the logging verbosity from 0 (errors only) to 3 (debug tracing). The 
 default is 2.
 .LP
